fix(css): masthead z-index
fix z-index of masthead so nav sits above service dogs list images

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -130,6 +130,7 @@ main {
 
 .masthead {
     background: url(../images/bg-texture-small.png);
+    z-index: 100;
     h2 {
     display: inline;
     z-index: 40;
